# SAILOR

./: imgui.ini  readme.md  requirements.txt
SRONet/: BasicRenNet.py  SRONet.py  aggregation.py  inference_dynamic.py  inference_static.py  nerf.py  toTensorRT.py  trainSRONet.py
SRONet/dataset/: TestDataset.py  TrainDataset.py
SRONet/options/: RenTestOptions.py
c_lib/AugDepth/: CMakeLists.txt  __init__.py  aug_depth.cpp  aug_depths.py  open3d_depth_fusion.py
c_lib/Depth2Color/: CMakeLists.txt  depth2color.cpp
c_lib/FastNerf/: setup.py
c_lib/RenderUtil/: __init__.py  render_data.py  render_utils.py  setup.py
c_lib/VoxelEncoding/: depth_normalization.py  freq_encoding.py  ray_sampling.py  setup.py  sh_encoding.py  udf_calculate.py  voxel_encoding_helper.py
checkpoints_rend/SAILOR/: notes.txt
depth_denoising/: DepthDenoising.py  HRNetDRM.py  inference.py  net.py  toTensorRT.py  trainDepthDenoising.py
depth_denoising/dataset/: TrainDataset.py
gui/: RenTestOptions.py  RenderGUIDataset.py  gui_load_data.py  gui_render.py
models/: Encoder.py  basicNet.py  data_utils.py  networks.py  utils.py
models/Classifies/: ClassicSurfaceClassifiers.py  ImplicitFunction.py  SirenFunction.py  TransFusionBlock.py  ViewsFusionBlock.py
models/Filters/: FaceHGFilters.py  HGFilters.py  HRNetDRM.py  (+3 more)
options/: GeoTrainOptions.py  RenTrainOptions.py
upsampling/: BasicRenNet.py  SRONetUp.py  inference_dynamic.py  inference_static.py  toTensorRT.py  trainSRONetUp.py
utils_render/: camera.py  mesh_util.py  open3d_depth_fusion.py  render_mesh.py  util.py  utils_render.py
(+103 files in other folders)
